--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,4 @@ linters = ["black", "ruff", "pydocstyle"]
 
 [project.scripts]
 icedrive-blob = "icedrive_blob.app:main"
+iceDriveCliente = "icedrive_blob.cliente:main"
